src/objects/Apttus_Approval__AdhocApprover__c.object
<CustomObject>
    <description>Defines approvers for an adhoc approval group</description>
    <fields>
        <fullName>Apttus_Approval__AdhocApprovalGroupId__c</fullName>
        <label>Adhoc Approval Group Id</label>
        <referenceTo>Apttus_Approval__AdhocApprovalGroup__c</referenceTo>
        <relationshipLabel>Adhoc Approvers</relationshipLabel>
        <relationshipName>AdhocApprovers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ApproverSequence__c</fullName>
        <label>Approver Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__AssigneeId__c</fullName>
        <label>Assignee Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__AssigneeType__c</fullName>
        <label>Assignee Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Role</fullName>
                </value>
                <value>
                    <fullName>Queue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__AssigneeValue__c</fullName>
        <label>Assignee Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__AutoReapprovalEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Reapproval Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__DependsOn__c</fullName>
        <label>Depends On</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__IsReviewer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Reviewer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SendEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <label>Adhoc Approver</label>
    <listViews>
        <fullName>Apttus_Approval__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Approval__AdhocApprovalGroupId__c</columns>
        <columns>Apttus_Approval__ApproverSequence__c</columns>
        <columns>Apttus_Approval__DependsOn__c</columns>
        <columns>Apttus_Approval__AssigneeType__c</columns>
        <columns>Apttus_Approval__AssigneeValue__c</columns>
        <columns>Apttus_Approval__AssigneeId__c</columns>
        <columns>Apttus_Approval__IsReviewer__c</columns>
        <columns>Apttus_Approval__AutoReapprovalEnabled__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AA-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adhoc Approvers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>